--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "babel-loader": "^7.1.5",
     "css-loader": "^1.0.0",
     "d3": "^5.9.2",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "johnny-five": "^1.0.0",
+    "pressure": "^2.1.2",
     "react": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
@@ -41,6 +42,6 @@
     "react-hot-loader": "^4.3.4",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.7.2"
   }
 }
